# sqs-async-python-consumer

./: .gitignore  README.md  docker-compose.yml  init-localstack.sh  mypy.ini  pyproject.toml
sqs_consumer_project/: async_worker.py  setup.py  sqs_consumer.py  user_svc_client.py
sqs_consumer_project/models/: example_sqs_message.py  record_user_response.py
tests/: test_async_worker.py  test_sqs_consumer.py
wiremock/mappings/: record_user.json
